--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ requests = "^2.30"
 shapely = "^2.0"
 
 
+[tool.poetry.scripts]
+btcmap-bot = "btcmap_bot.bot:run"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
